kakee 更改实时数据

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_plants_detail">PlantsDetailActivity</string>
+    <string name="title_activity_plants_status">PlantsStatusActivity</string>
 
 
 </resources>
