--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="member_change_password">修改密码</string>
     <string name="member_favorite">我的收藏</string>
     <string name="member_plant">植物百科</string>
+    <string name="member_value_set">阈值设置</string>
     <string name="member_verson">软件版本</string>
     <string name="member_logout">退出登录</string>
 
@@ -55,7 +56,7 @@
     <string name="btn_search">统计查询</string>
     <string name="btn_camera">在线监控</string>
     <string name="btn_control">种植控制</string>
-    <string name="btn_alert">故障报警</string>
+    <string name="btn_alert">环境报警</string>
     <string name="btn_type">种植选型</string>
     <string name="btn_chat">种植交流</string>
 
