--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <!-- 页面名称 -->
     <string name="main_navigation_home">首页</string>
-    <string name="main_navigation_im">实时</string>
+    <string name="main_navigation_im">植物</string>
     <string name="main_navigation_add">新增</string>
     <string name="main_navigation_interest">百科</string>
     <string name="main_navigation_user">我的</string>
